--- a/03_lecture/tsconfig.json
+++ b/03_lecture/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
+    "module": "es6",
     "esModuleInterop": true,
     "target": "es6",
     "moduleResolution": "node",
